Fix an issue where some tables wouldn't show
Complete 8101575fad3aae6b37473ea8e17cf245d0e19bbe

--- a/app/views/admin/map_versions/index.html.erb
+++ b/app/views/admin/map_versions/index.html.erb
@@ -20,7 +20,7 @@
 <%= javascript_pack_tag 'application' %>
 <%= react_component('AdminTableView', {
   meta: {
-    columns: ['Version', 'Position', 'Description'],
+    columns: ['version', 'position', 'description'],
     actions: ['edit', 'delete']
   },
   data: @formattedMaps
