--- a/app/views/admin/sites/index.html.erb
+++ b/app/views/admin/sites/index.html.erb
@@ -20,7 +20,7 @@
 <%= javascript_pack_tag 'application' %>
 <%= react_component('AdminTableView', {
   meta: {
-    columns: ['Title', 'Template', 'Preview'],
+    columns: ['title', 'template', 'preview'],
     actions: ['edit', 'delete']
   },
   data: @formattedSites
