--- a/app/assets/stylesheets/front/_base-theme-ind.scss
+++ b/app/assets/stylesheets/front/_base-theme-ind.scss
@@ -613,7 +613,7 @@ a {
   top: 30px !important; // We need to override map builder styles
 }
 
-.tab-972s__tab.mobile-show[data-value="MORE"] {
+.tab-buttons__tab.mobile-show[data-value="MORE"] {
   display: none !important;
 }
 
@@ -1096,4 +1096,39 @@ form{
   position: relative;
   top: 10px;
   right: 10px;
+ }
+
+ .infoWindow__footer{
+  display: none !important;
+ }
+
+ .control-panel__print{
+  display: none !important;
+ }
+
+ .control-panel__draw-upload{
+  display: none !important;
+ }
+
+
+.atlas_wrapper{
+  
+  text-align: center;
+  position: relative;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+ .button_print{
+  font-size: 15px;
+  font-weight: 500;
+  border-radius: 16px;
+  color: #555;
+  border: 2px solid #eee;
+  position: relative;
+  line-height: 2;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 10px;
+  text-transform: uppercase;
+  background-color: #fff;
  }
