--- a/app/assets/stylesheets/front/_base-theme-carpe.scss
+++ b/app/assets/stylesheets/front/_base-theme-carpe.scss
@@ -46,10 +46,11 @@ ul {
   }
 }
 
-a {
+a,
+.ql-bubble .ql-editor a {
   // Do not set inline-block here otherwise the links will be forced to be on online line
   padding: 0 3px;
-  color: currentColor;
+  color: $color-1;
   text-decoration: none;
 }
 
