--- a/app/assets/stylesheets/components/shared/c-vizz-wysiwyg.scss
+++ b/app/assets/stylesheets/components/shared/c-vizz-wysiwyg.scss
@@ -45,6 +45,37 @@
     }
   }
 
+  .cw-wysiwyg-item-content {
+    &.-html,
+    &.-text {
+      h1 {
+        margin: 40px auto 10px;
+        color: $color-4;
+        font-size: $font-size-huge;
+        font-weight: $font-weight-light;
+        letter-spacing: .3px;
+      }
+
+      h2 {
+        margin: 20px auto 5px;
+        color: $color-4;
+        font-size: $font-size-medium;
+        font-weight: $font-weight-bold;
+        letter-spacing: .2px;
+      }
+
+      p {
+        font-size: $font-size-normal;
+        letter-spacing: .1px;
+        line-height: 1.5;
+
+        & + p {
+          margin-top: .9em;
+        }
+      }
+    }
+  }
+
   .cw-wysiwyg-list-item {
     &.-image {
       text-align: center;
